Table Cliente {
  id_cliente int [pk]
  tipo varchar(2) // PF ou PJ
  cpf_cnpj varchar(18) [unique]
}

Table ClientePF {
  id_cliente int [pk, ref: > Cliente.id_cliente]
  nome varchar(255)
  data_nascimento date
}

Table ClientePJ {
  id_cliente int [pk, ref: > Cliente.id_cliente]
  razao_social varchar(255)
  nome_fantasia varchar(255)
  inscricao_estadual varchar(50)
}

Table Endereco {
  id_endereco int [pk]
  id_cliente int [ref: > Cliente.id_cliente]
  logradouro varchar(255)
  cidade varchar(100)
  estado char(2)
  cep varchar(10)
}

Table FormaPagamento {
  id_pagamento int [pk]
  id_cliente int [ref: > Cliente.id_cliente]
  tipo varchar(20) // Cartão, Boleto, Pix
  detalhes varchar(255)
}

Table Pedido {
  id_pedido int [pk]
  id_cliente int [ref: > Cliente.id_cliente]
  id_endereco int [ref: > Endereco.id_endereco]
  data_compra datetime
  status varchar(20) // Processando, Enviado, Entregue, Cancelado
  valor_total decimal(10,2)
  frete decimal(10,2)
  prazo_devolucao int
}

Table Produto {
  id_produto int [pk]
  nome varchar(255)
  descricao text
  preco decimal(10,2)
  id_fornecedor int [ref: > Fornecedor.id_fornecedor]
  id_categoria int [ref: > Categoria.id_categoria]
}

Table Categoria {
  id_categoria int [pk]
  nome varchar(100)
}

Table Fornecedor {
  id_fornecedor int [pk]
  nome varchar(255)
  contato varchar(255)
}

Table Estoque {
  id_estoque int [pk]
  id_produto int [ref: > Produto.id_produto]
  quantidade int
}

Table ProdutoPedido {
  id_pedido int [ref: > Pedido.id_pedido]
  id_produto int [ref: > Produto.id_produto]
  quantidade int

  Indexes {
    (id_pedido, id_produto) [pk]
  }
}

Table Entrega {
  id_entrega int [pk]
  id_pedido int [ref: > Pedido.id_pedido]
  codigo_rastreio varchar(50)
  status varchar(30) // Aguardando Envio, Enviado, Em Transporte, Entregue, Extraviado
}

Table Vendedor {
  id_vendedor int [pk]
  nome varchar(255)
  contato varchar(255)
}

Table ProdutoVendedor {
  id_vendedor int [ref: > Vendedor.id_vendedor]
  id_produto int [ref: > Produto.id_produto]

  Indexes {
    (id_vendedor, id_produto) [pk]
  }
}
